feat: add model save/load feature
- Add save model feature to export trained model weights and metadata
- Add load model feature to resume training from saved state
- Save generation count, epsilon value and total score with model

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
             </div>
             <button id="startAI">AI'yı Başlat</button>
             <button id="stopAI">AI'yı Durdur</button>
+            <button id="saveModel">Modeli Kaydet</button>
+            <button id="loadModel">Model Yükle</button>
+            <input type="file" id="modelFile" accept=".json" style="display: none">
             <div id="stats">
                 <p>Önceki Skor: <span id="score">0</span></p>
                 <p>Jenerasyon: <span id="jenerasyon">0</span></p>
