feat: Add mobile responsive design and touch support

--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,15 @@
 <html lang="tr" data-theme="light">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>AI Snake Game</title>
+    <style>
+        /* Mobil cihazlarda dokunmatik kaydırmayı engelle */
+        html, body {
+            touch-action: none;
+            overscroll-behavior: none;
+        }
+    </style>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
